feat(user): 添加用户中心管理功能